# PyCalib

./: .gitignore  pyproject.toml
pycalib/calibration/: single.py  single_cv.py  stereo.py  stereo_cv.py
pycalib/configs/: calibrationPolyfit050_old.json  cam_params_depth_map.json  cam_params_depth_map_cv.json  cam_params_depth_map_matlab.json  cam_params_depth_map_stereo.json  cam_params_phase.json  debugging.yaml  height_map_calculating.yaml  height_map_calculating_old.yaml  template_config.yaml
pycalib/data/image_sources/image_data_cv/0/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  2.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
pycalib/data/image_sources/image_data_cv/1/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  2.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
pycalib/evaluation/: calc_depth_map.py  evaluator.py  original_eval.py
pycalib/feature_processing/: extract_features.py  extract_features_cv.py  feature_extractor.py  feature_extractor_cv.py  feature_processing_utils.py  feature_tracker.py
pycalib/optimization/: jacobian_builder_single.py  jacobian_builder_stereo.py  optimizer_configs.py  optimizer_single.py  optimizer_stereo.py  optimizer_utils.py
pycalib/results/: Camera_calib_report.json  Projector_calib_report.json  stereo_calib_report.json
pycalib/visualization/: vis_extr_single.py  vis_extr_single_cam.py  vis_extr_stereo.py
utils/: evaluate_calib_results.py  imge_combiner.py  reformatting_data_to_matlab.py  stereo_results_convert.py
(+2181 files in other folders)
