[project]
name = "pycalib"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "matplotlib",
    "scikit-learn",
    "scikit-image",
    "scipy",
    "svgwrite>=1.4.3",
    "setuptools>=59.6.0",
    "tables>=3.10.1",
    "deprecation>=2.1.0",
    "h5py>=3.13.0",
    "pyyaml>=6.0.2",
    "numpy==1.26.4",
    "pyqt6>=6.9.0",
    "pyside2>=5.15.2.1",
    "open3d>=0.19.0",
    "pyvista>=0.45.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pycalib", "third_party"]
